[package]
name = "owo"
version = "0.4.0"
edition = "2021"
authors = ["Okashi <okashi@okash.it"]
description = "A simple uploader for owo.whats-th.is."
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/OkashiOdayakana/owo.rs"


[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"]}
infer = "0.13.0"
reqwest = { version = "0.11.17", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.96"
[profile.release]
lto = true
strip = true